
  HCAT-182 Web services interface for HCatalog access and Pig, Hive, and MR job execution (ctdean, Rachel Gollub, and thejas via gates)

  HCAT-328 HCatLoader should report its input size so pig can estimate the number of reducers (traviscrawford via gates)

  HCAT-427 Document storage-based authorization (lefty via gates)

  IMPROVEMENTS
  HCAT-532 HiveClientCache shutdown hook should log at debug level (traviscrawford)

  HCAT-528 ivysettings.xml does not let you override .m2/repository or ivy.cache.dir setting (raja@cmbasics.com via traviscrawford)

  HCAT-516 HCOF should use less generic parameters (nitay via traviscrawford)

  HCAT-525 Remove dead classes from HCatalog Source Tree (amalakar via traviscrawford)

  HCAT-521 Ignore .reviewboardrc in git (nitay via traviscrawford)

  HCAT-519 Migrate pig-adapter/webhcat to maven dependencies and continue build cleanup (traviscrawford)

  HCAT-517 Misc. build cleanup (traviscrawford)

  HCAT-506 desired number of input splits for large files (gmalewicz via traviscrawford)

  HCAT-461 Refactor server-extensions as a subproject (traviscrawford)

  HCAT-500 HCatStorer should honor user-specified path for external tables (pengfeng via traviscrawford)

  HCAT-493 Convert classes with 2 space indentation to 4 space indentation for consistent style (amalakar via traviscrawford)

  HCAT-489 HCatalog style cleanups and readd javac debug option (traviscrawford)

  HCAT-431 document hcat type to java class/pig type mapping (lefty via khorgath)

  HCAT-492 Document CTAS workaround for Hive with JSON serde (lefty via khorgath)

  HCAT-487 HCatalog should tolerate a user-defined amount of bad records (traviscrawford)

  HCAT-488 TestHCatStorer should extend HCatBaseTest so it uses junit4 and runs inside an IDE (traviscrawford)

  HCAT-486 HCatalog should use checkstyle to enforce coding style (traviscrawford)

  HCAT-484 HCatalog should use ql.metadata Table and Partition classes (traviscrawford)
